; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_cma.c_cma_alloc_any_port.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_cma.c_cma_alloc_any_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rdma_id_private = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.vnet* }
%struct.vnet = type { i32 }

@cma_alloc_any_port.last_used_port = internal global i32 0, align 4
@EADDRNOTAVAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.rdma_id_private*)* @cma_alloc_any_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cma_alloc_any_port(i32 %0, %struct.rdma_id_private* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.rdma_id_private*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.vnet*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.rdma_id_private* %1, %struct.rdma_id_private** %5, align 8
  %13 = load %struct.rdma_id_private*, %struct.rdma_id_private** %5, align 8
  %14 = getelementptr inbounds %struct.rdma_id_private, %struct.rdma_id_private* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 0
  %19 = load %struct.vnet*, %struct.vnet** %18, align 8
  store %struct.vnet* %19, %struct.vnet** %10, align 8
  %20 = load %struct.vnet*, %struct.vnet** %10, align 8
  %21 = call i32 @inet_get_local_port_range(%struct.vnet* %20, i32* %6, i32* %7)
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %6, align 4
  %24 = sub nsw i32 %22, %23
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %8, align 4
  %26 = call i32 @get_random_bytes(i32* %11, i32 4)
  %27 = load i32, i32* %11, align 4
  %28 = load i32, i32* %8, align 4
  %29 = srem i32 %27, %28
  %30 = load i32, i32* %6, align 4
  %31 = add nsw i32 %29, %30
  store i32 %31, i32* %9, align 4
  br label %32

32:                                               ; preds = %76, %2
  %33 = load i32, i32* @cma_alloc_any_port.last_used_port, align 4
  %34 = load i32, i32* %9, align 4
  %35 = icmp ne i32 %33, %34
  br i1 %35, label %36, label %60

36:                                               ; preds = %32
  %37 = load %struct.vnet*, %struct.vnet** %10, align 8
  %38 = load i32, i32* %4, align 4
  %39 = load i32, i32* %9, align 4
  %40 = trunc i32 %39 to i16
  %41 = call i32 @cma_ps_find(%struct.vnet* %37, i32 %38, i16 zeroext %40)
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %60, label %43

43:                                               ; preds = %36
  %44 = load i32, i32* %4, align 4
  %45 = load %struct.rdma_id_private*, %struct.rdma_id_private** %5, align 8
  %46 = load i32, i32* %9, align 4
  %47 = call i32 @cma_alloc_port(i32 %44, %struct.rdma_id_private* %45, i32 %46)
  store i32 %47, i32* %12, align 4
  %48 = load i32, i32* %12, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %52, label %50

50:                                               ; preds = %43
  %51 = load i32, i32* %9, align 4
  store i32 %51, i32* @cma_alloc_any_port.last_used_port, align 4
  br label %52

52:                                               ; preds = %50, %43
  %53 = load i32, i32* %12, align 4
  %54 = load i32, i32* @EADDRNOTAVAIL, align 4
  %55 = sub nsw i32 0, %54
  %56 = icmp ne i32 %53, %55
  br i1 %56, label %57, label %59

57:                                               ; preds = %52
  %58 = load i32, i32* %12, align 4
  store i32 %58, i32* %3, align 4
  br label %80

59:                                               ; preds = %52
  br label %60

60:                                               ; preds = %59, %36, %32
  %61 = load i32, i32* %8, align 4
  %62 = add nsw i32 %61, -1
  store i32 %62, i32* %8, align 4
  %63 = icmp ne i32 %62, 0
  br i1 %63, label %64, label %77

64:                                               ; preds = %60
  %65 = load i32, i32* %9, align 4
  %66 = add i32 %65, 1
  store i32 %66, i32* %9, align 4
  %67 = load i32, i32* %9, align 4
  %68 = load i32, i32* %6, align 4
  %69 = icmp ult i32 %67, %68
  br i1 %69, label %74, label %70

70:                                               ; preds = %64
  %71 = load i32, i32* %9, align 4
  %72 = load i32, i32* %7, align 4
  %73 = icmp ugt i32 %71, %72
  br i1 %73, label %74, label %76

74:                                               ; preds = %70, %64
  %75 = load i32, i32* %6, align 4
  store i32 %75, i32* %9, align 4
  br label %76

76:                                               ; preds = %74, %70
  br label %32

77:                                               ; preds = %60
  %78 = load i32, i32* @EADDRNOTAVAIL, align 4
  %79 = sub nsw i32 0, %78
  store i32 %79, i32* %3, align 4
  br label %80

80:                                               ; preds = %77, %57
  %81 = load i32, i32* %3, align 4
  ret i32 %81
}

declare dso_local i32 @inet_get_local_port_range(%struct.vnet*, i32*, i32*) #1

declare dso_local i32 @get_random_bytes(i32*, i32) #1

declare dso_local i32 @cma_ps_find(%struct.vnet*, i32, i16 zeroext) #1

declare dso_local i32 @cma_alloc_port(i32, %struct.rdma_id_private*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
